other: change .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore everything in the root except the "wp-content" directory.
 /*
-!wp-content/
+# !wp-content/
 
 # Ignore everything in the "wp-content" directory, except the "plugins"
 # and "themes" directories.
