--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@
 #wp-content/themes/*
 # !wp-content/themes/my-theme/
 #/*
-!wp-content
-!wp-content/themes
+#!wp-content
+#!wp-content/themes
 #wp-content/themes/e-trav
 # Ignorer ces themes lorqu'on les push sur la repo distant
 !wordpress-docker/wp-content/themes/twentynineteen/
