--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,5 @@
 #!wp-content/themes
 #wp-content/themes/e-trav
 # Ignorer ces themes lorqu'on les push sur la repo distant
-!wordpress-docker/wp-content/themes/twentynineteen/
-!wordpress-docker/wp-content/themes/twentytwenty/
+wordpress-docker/wp-content/themes/twentynineteen/
+wordpress-docker/wp-content/themes/twentytwenty/
