--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.1'
 services:
   db:
     image: mysql:5.7
+    container_name: wordpress_webserver
     volumes:
       - db_data:/var/lib/mysql
     restart: always
@@ -11,12 +12,12 @@ services:
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
-
-#phpmyadmin
+   # phpmyadmin
   phpmyadmin:
     depends_on: 
       - db
     image: phpmyadmin/phpmyadmin
+    container_name: wordpress_phpmyadmin
     restart: always
     ports: 
       - '8080:80'
@@ -28,6 +29,7 @@ services:
     depends_on:
       - db
     image: wordpress:5.6.2-php7.4-apache
+    container_name: wordpress
     ports:
       - "5000:80"
     restart: always
@@ -35,6 +37,7 @@ services:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
+    
     working_dir: /var/www/html
     volumes:
       - ./wp-content:/var/www/html/wp-content
